--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="alert_in_km">Radius of Alert in Kilometers</string>
     <string name="vibration_alert">Enable Vibration Alert when entering area with high crime rate</string>
     <string name="sound_alert">Enable Sound Alert when entering area with high crime rate</string>
+    <string name="crime_type">Crime Type</string>
+    <string name="hundred_block">Hundred Block</string>
+    <string name="neighbourhood">Neighbourhood</string>
+    <string name="date">Date</string>
 </resources>
