--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="hundred_block">Hundred Block</string>
     <string name="neighbourhood">Neighbourhood</string>
     <string name="date">Date</string>
+    <string name="crime_time">Crime Time</string>
 </resources>
