--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="neighbourhood">Neighbourhood</string>
     <string name="date">Date</string>
     <string name="crime_time">Crime Time</string>
+    <string name="crime_image">Crime Image</string>
 </resources>
