--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">CrimeHelp</string>
     <string name="title_activity_maps">Map</string>
-    <string name="Settings">Settings</string>
+    <string name="Settings">Search Settings</string>
     <string name="alert_in_km">Radius of Alert in Kilometers</string>
     <string name="vibration_alert">Enable Vibration Alert when entering area with high crime rate</string>
     <string name="sound_alert">Enable Sound Alert when entering area with high crime rate</string>
@@ -11,4 +11,5 @@
     <string name="date">Date</string>
     <string name="crime_time">Crime Time</string>
     <string name="crime_image">Crime Image</string>
+    <string name="max_number_of_markers">Max number of markers</string>
 </resources>
