--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CrimeHelp</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">CrimeZone</string>
     <string name="Settings">Search Settings</string>
     <string name="alert_in_km">Radius of Alert in Kilometers</string>
     <string name="vibration_alert">Enable Vibration Alert when entering area with high crime rate</string>
